<resources>
    <string name="app_name">ShipProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_text">Что вы ищете?</string>
    <string name="title_bar">Главная</string>
    <string name="stock">АКЦИИ</string>
    <string name="recommend">РЕКОМЕНДУЕМ ВАМ</string>
    <string name="local_shop">Адреса магазинов</string>
    <string name="localText">Найдите магазины, которые\nнаходятся с рядом с вами!</string>
    <string name="imageDescription">Image</string>
    <string name="PhoneHead">Связь с нами</string>
    <string name="PhoneBody">Присоединяйтесь к нам в соц.\nсетях и следите за новостями!</string>
    <string name="Card_head">ПОДАРОЧНЫЕ КАРТЫ</string>
    <string name="prise_cart_body">Электронный подарочный\nсертификат</string>
    <string name="yalow_body_cart">Подарочная карта гибкого\nноминала</string>
    <string name="blue_body_cart">Корпоративные\nподарочные карты</string>
    <string name="dop_block_body">Получайте персональные рекомендации по мере роста и развития Ваших малышей!</string>
    <string name="boy">Мальчик</string>
    <string name="girl">Девочка</string>
    <string name="look_head">ВЫ НЕДАВНО СМОТРЕЛИ</string>
    <string name="all">ВСЕ</string>
    <string name="new_head">НОВИНКИ</string>
    <string name="prise_body">Поможем подобрать подарок ребёнку по вкусу!</string>
    <string name="button_price">ПОДОБРАТЬ</string>
    <string name="complect_ready">ГОТОВЫЕ КОМЛПЕКТЫ</string>
    <string name="in_basket">В КОРЗИНУ</string>
    <string name="complect_body">Комплект Barkito Водолазка + пижама + носки</string>
    <string name="sale">РАСПРОДАЖА</string>
    <string name="top">ТОП ПРОДАЖ</string>
</resources>
