<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="24dp"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/iv_prise"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:src="@drawable/ic_gift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="81dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/prise_body"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_prise" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="152dp"
            android:layout_height="36dp"
            android:background="@drawable/rouded_cerulean"
            android:text="@string/button_price"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>