<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    android:layout_marginBottom="24dp"
    android:background="#ffffff">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="81dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/dop_block_body"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/bt_boy"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rouded_sky_blue"
            android:text="@string/boy"
            android:textColor="#ffffff"
            android:textSize="14sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_girl"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rouded_medium_pink"
            android:text="@string/girl"
            android:textColor="#ffffff"
            android:textSize="14sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>