<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_head_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/local_shop"
            android:textColor="#000000"
            android:textSize="16sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/localText"
            android:textColor="#61000000"
            android:textSize="14sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_head_shop" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="36dp"
            android:background="@null"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/cl_shop"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:src="@drawable/ic_call_copy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imageDescription" />

        <TextView
            android:id="@+id/tv_head_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/PhoneHead"
            android:textColor="#000000"
            android:textSize="16sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/PhoneBody"
            android:textColor="#61000000"
            android:textSize="14sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_head_phone"
            android:layout_marginLeft="72dp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="36dp"
            android:background="@null"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imageDescription" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>