<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="302dp"
    android:layout_height="224dp"
    android:layout_marginEnd="24dp"
    android:layout_marginRight="24dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="90dp"
            android:layout_height="78dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:src="@drawable/kof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/imageDescription" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="90dp"
            android:layout_height="78dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:src="@drawable/shtan"
            app:layout_constraintStart_toEndOf="@+id/imageButton1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/imageDescription" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="90dp"
            android:layout_height="78dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:src="@drawable/noski"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imageDescription" />

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/complect_body"
            android:textColor="#222222"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            card_view:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_cost_complect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_ui_text_regular"
            android:lineSpacingExtra="16dp"
            android:textColor="@color/text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_body"
            card_view:ignore="MissingConstraints"
            android:layout_marginLeft="12dp" />


        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/rouded"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/in_basket"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>