<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/Card_head"
        android:theme="@style/TextViewHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_rad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/iv_red_cart"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/red_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/prise_cart_body"
            android:textSize="16sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_red_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_yalow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/cl_rad"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/iv_yalow_cart"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/gold_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/yalow_body_cart"
            android:textSize="16sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_yalow_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/cl_yalow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/iv_blue_cart"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:src="@drawable/blue_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imageDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/blue_body_cart"
            android:textSize="16sp"
            android:theme="@style/TextViewHead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_blue_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imageDescription" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>